--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,3 +20,13 @@
 <p>
   <%= @project.description %>
 </p>
+
+
+<ul id="tickets">
+  <% @project.tickets.each do |ticket| %>
+    <li>
+      #<%= ticket.id %> -
+      <%= link_to ticket.name, [@project, ticket] %>
+    </li>
+  <% end %>
+</ul>
