Users can tag tickets upon creation

--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -28,3 +28,18 @@ blockquote.comment p {
 #tickets li {
   padding: 10px;
 }
+
+.tag {
+  @extend .state;
+  @extend .label-info;
+  margin-right: 10px;
+  a {
+    color: white;
+    &.remove {
+      font-family: "FontAwesome";
+      @extend .fa-close;
+      margin-right: 0.5em;
+      text-decoration: none;
+    }
+  }
+}
