--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -27,7 +27,13 @@
         <th>State:</th>
         <td><%= render @ticket.state %></td>
       </tr>
-  <% end %>
+    <% end %>
+    <% if @ticket.tags.any? %>
+      <tr id='tags'>
+        <th>Tags:</th>
+        <td><%= render @ticket.tags %></td>
+      </tr>
+    <% end %>
   </table>
   <%= simple_format(@ticket.description) %>
 
